# fastapi-template

./: README.md  docker-compose.dev.yaml  pyproject.toml
src/migrations/: env.py
src/migrations/versions/: 7e16d0d7fcd2_init.py
src/project/: config.py  dependencies.py  manage.py
src/project/api/: __init__.py  dependencies.py
src/project/api/v1/: __init__.py  auth.py  rbac.py  users.py
src/project/core/: asgi.py  cbv.py  exceptions.py  logger.py  security.py  session.py
src/project/core/cli/: __init__.py  migrations.py  server.py
src/project/core/middlewares/: __init__.py  loging.py
src/project/models/: __init__.py  auth.py  base.py
src/project/repositories/: __init__.py  auth.py  base.py  celery.py  rbac.py
src/project/schemas/: __init__.py  auth.py  base.py  rbac.py  users.py
src/project/schemas/filters/: __init__.py  rbac.py
src/project/services/: __init__.py  auth.py  base.py  mail.py  rbac.py  users.py
src/project/utils/: jwts.py  password.py  string.py
