[project]
version = "0.1.0"
name = "project"
description = "Ready to use fastapi production template"
authors = [
    {name = "Vladyslav Chaliuk",email = "chaliukvladyslav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "inflect (>=7.5.0,<8.0.0)",
    "fastapi-pagination (>=0.13.2,<0.14.0)",
    "fastapi-filter (>=2.0.1,<3.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "pwdlib[argon2,bcrypt] (>=0.2.1,<0.3.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "makefun (>=1.16.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "celery (>=5.5.3,<6.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]






[tool.poetry]
package-mode = true
packages = [{include = "project", from="src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
